--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 ---
 layout: about
 title: About
+banner: "/assets/images/banners/about.jepg"
 ---
 
 <h2>关于</h2>
 
 <p>
-:art:&nbsp;博客初衷：
+博客初衷：
 </p>
 
 <p>
